--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "CI=false craco build",
+    "build": "DISABLE_ESLINT_PLUGIN=true CI=false craco build",
     "test": "craco test"
   },
   "browserslist": {
